[package]
name = "nullspaceclient"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-Os', '--all-features', '--no-validation', '--enable-bulk-memory', '--strip-debug', '--strip-producers']
# Disable for now for iteration speed
wasm-opt = false

[profile.release]
strip = true
opt-level = 3

[lib]
name = "nullspace"
crate-type = ["cdylib", "rlib"]

[dependencies]
miniz_oxide = "0.9.1"
thiserror = "2.0.18"
image = { version = "0.25.10", default-features = false, features = ["bmp", "jpeg", "png"] }
winit = "0.30.13"
log = "0.4.29"
bytemuck = { version = "1.25.0", features = [ "derive" ] }
glam = { version = "0.32.1", features = [ "encase", "bytemuck" ] }
encase = "0.12.0"

# These are here temporarily for development autocomplete.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", default-features = false, features = [ "Document", "Window", "Element", "Performance", "WebTransport", "WebTransportOptions", "WebTransportHash", "WebTransportDatagramDuplexStream", "ReadableStream", "WritableStream", "ReadableStreamDefaultReader", "WritableStreamDefaultWriter", "HtmlImageElement", "ImageBitmap", "ImageData", "OffscreenCanvas", "OffscreenCanvasRenderingContext2d" ] }
js-sys = "0.3.95"
smol_str = "0.3.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "29.0.1", default-features = false, features = ["vulkan", "wgsl"] }
env_logger = "0.11.10"
pollster = "0.4.0"
clap = { version = "4.6.1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "29.0.1", default-features = false, features = ["webgpu", "wgsl"] }
